force-app/main/default/objects/BMCServiceDesk__Change_Problem_Link__c/BMCServiceDesk__Change_Problem_Link__c.object-meta.xml
<CustomObject>
    <customHelpPage>BMCServiceDesk__StdFormHelpCommonLink</customHelpPage>
    <description>This object allows you to store data linking between changes and problems.</description>
    <label>Change Problem Link</label>
    <nameField>
        <label>Change Problem Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Change Problem Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>