force-app/main/default/objects/BMCServiceDesk__Change_Problem_Link__c/fields/BMCServiceDesk__FKProblem__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKProblem__c</fullName>
    <description>This field stores the foreign key value of the linked problem</description>
    <label>Problem</label>
    <referenceTo>BMCServiceDesk__Problem__c</referenceTo>
    <relationshipLabel>Linked Change Requests</relationshipLabel>
    <relationshipName>Change_Problem_Links</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>