force-app/main/default/objects/BMCServiceDesk__Change_Problem_Link__c/fields/BMCServiceDesk__FKProblem_Owner__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKProblem_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Change_Problem_Links</relationshipName>
    <type>Lookup</type>
</CustomField>